<resources>
    <string name="app_name">Andrioid-213</string>

    <!-- region Calculator -->
    <string name="calc_tv_title">Калькулятор</string>
    <string name="calc_btn_0">0</string>
    <string name="calc_btn_1">1</string>
    <string name="calc_btn_2">2</string>
    <string name="calc_btn_3">3</string>
    <string name="calc_btn_4">4</string>
    <string name="calc_btn_5">5</string>
    <string name="calc_btn_6">6</string>
    <string name="calc_btn_7">7</string>
    <string name="calc_btn_8">8</string>
    <string name="calc_btn_9">9</string>
    <string name="calc_btn_percent">%</string>
    <string name="calc_btn_ce">CE</string>
    <string name="calc_btn_c">C</string>
    <string name="calc_btn_backspace">\u232B</string>
    <string name="calc_btn_inv">¹⁄ₓ</string>
    <string name="calc_btn_sqr">x²</string>
    <string name="calc_btn_sqrt">√x</string>
    <string name="calc_btn_div">÷</string>
    <string name="calc_btn_mul">*</string>
    <string name="calc_btn_sub">-</string>
    <string name="calc_btn_add">+</string>
    <string name="calc_btn_equal">=</string>
    <string name="calc_btn_dot">.</string>
    <string name="calc_btn_pm">+/-</string>
    <string name="calc_error">Помилка</string>
    <!-- endregion -->

    <!-- region Game -->
    <string name="game_tv_title">2048</string>
    <string name="game_tv_hint">Join the numbers and get to the 2048 title!</string>
    <string name="game_tv_new">NEW</string>
    <string name="game_tv_undo">UNDO</string>
    <string name="game_tv_score">SCORE</string>
    <string name="game_tv_best">BEST</string>
    <!-- endregion -->

    <!-- region Rate -->
    <string name="rate_tv_load_fail">Nbu rates load fail</string>
    <string name="rate_detailed_info">Повна назва: %1$s\nСкорочена назва: %2$s\nКод за r030: %3$d\nКурс на %4$s: 1 %2$s = %5$f HRN</string>
    <!-- endregion -->

    <!-- region Chat -->
    <string name="chat_tv_title">Теревеньки</string>
    <string name="chat_tv_author">Автор:</string>
    <string name="chat_author_hint">Ваш нік у чаті</string>
    <string name="chat_author_remember">Зберегти</string>
    <string name="chat_send_hint">Надіслати повідомлення</string>
    <string name="chat_message_hint">Введіть повідомлення</string>
    <string name="chat_content_hint">Останні повідомлення</string>
    <string name="chat_msg_no_author">Введіть ваш нік</string>
    <string name="chat_msg_no_text">Введіть повідомлення</string>
    <string name="chat_msg_no_send">Надсилання зупинене</string>
    <string name="chat_msg_no_send_btn">Зрозуміло</string>
    <!-- endregion -->
</resources>