<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/game_tv_background"
    android:padding="20dp"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/game_all_shape"
            android:backgroundTint="@color/game_tv_title"
            android:text="@string/game_tv_title"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/game_all_shape"
                android:backgroundTint="@color/game_tv_stats"
                android:padding="5dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/game_tv_score"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="512"/>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/game_btn"
                android:text="@string/game_tv_new"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/game_all_shape"
                android:backgroundTint="@color/game_tv_stats"
                android:padding="5dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/game_tv_best"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="69.6k"/>
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/game_btn"
                android:text="@string/game_tv_undo"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/game_tv_text_dark"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginVertical="20dp"
        android:text="@string/game_tv_hint"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <GridLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:padding="5dp"
                android:background="@drawable/game_all_shape"
                android:backgroundTint="@color/game_tv_field"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_gravity="center"
                android:columnCount="4">
                <TextView style="@style/game_cell_4"/>
                <TextView style="@style/game_cell_2"/>
                <TextView style="@style/game_cell"/>
                <TextView style="@style/game_cell"/>
                <TextView style="@style/game_cell_8"/>
                <TextView style="@style/game_cell_4"/>
                <TextView style="@style/game_cell"/>
                <TextView style="@style/game_cell"/>
                <TextView style="@style/game_cell_32"/>
                <TextView style="@style/game_cell_8"/>
                <TextView style="@style/game_cell_4"/>
                <TextView style="@style/game_cell_2"/>
                <TextView style="@style/game_cell_64"/>
                <TextView style="@style/game_cell_16"/>
                <TextView style="@style/game_cell_8"/>
                <TextView style="@style/game_cell_4"/>
            </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>